--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
         <div class="emoticons-box">
           <div class="emoticons clearfix">
           <ul id="emoteList">
-            <li title="emote1"></li>
-            <li title="emote2"></li>
-            <li title="emote3"></li>
-            <li title="emote4"></li>
-            <li title="emote5"></li>
-            <li title="emote6"></li>
-            <li title="emote7"></li>
-            <li title="emote8"></li>
-            <li title="emote9"></li>
-            <li title="emote10"></li>
-            <li title="emote11"></li>
-            <li title="emote12"></li>
+            <li title="bearoChamp"></li>
+            <li title="bearoCry"></li>
+            <li title="bearoHuhu"></li>
+            <li title="bearoLUL"></li>
+            <li title="bearoFail"></li>
+            <li title="bearoHi"></li>
+            <li title="bearoRekt"></li>
+            <li title="bearoLove"></li>
+            <li title="bearoWoah"></li>
+            <li title="bearoOk"></li>
+            <li title="bearoNo"></li>
+            <li title="bearoWut"></li>
           </ul>
         </div>
 
           <div class="emoticons-links">
               <ul>
                 <li>
-                <a href="#">Channel</a>
+                <a href="#" class="active">Channel</a>
               </li>
               <li>
                 <a href="#">All</a>
