--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link rel="stylesheet" href="css/stylesheet.css">
+      <link rel="stylesheet" href="sass/stylesheet.css">
 
 
     </head>
@@ -29,7 +29,7 @@
         <div class="emoticons-box">
           <div class="emoticons clearfix">
           <ul id="emoteList">
-            <li title="bearoChamp"></li>
+            <li id="test" title="bearoChamp"></li>
             <li title="bearoCry"></li>
             <li title="bearoHuhu"></li>
             <li title="bearoLUL"></li>
@@ -60,7 +60,7 @@
         <div class="chat-interface">
 
           <div class="chat-textarea">
-              <textarea type="text" name="chat-form" class="chat-form clearfix" placeholder="Send a message"></textarea>
+              <textarea type="text" name="chat-form" id="chat-form" class="chat-form clearfix" placeholder="Send a message"></textarea>
 
               <span class="emotes button">
               <a href="jquery.com">
@@ -75,7 +75,7 @@
           <div class="last-container clearfix">
 
               <a href="#">
-                <span class="gear button">
+                <span class="gear button" title="gear">
                   <svg class="svg-gear" height="16" viewBox="0 0 16 16" width="16">
                     <path d="M6.359 0h3.282l1.436 2.8h3.282L16 5.2 14.359 8 16 10.8l-1.641 2.4h-3.282L9.64 16H6.359l-1.436-2.8H1.641L0 10.8 1.641 8 0 5.2l1.641-2.4h3.282L6.36 0zM8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
                   </svg>
